k8s-config/deployment-api.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: classnalytic-api
  namespace: classnalytic
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: classnalytic-api
    spec:
      containers:
      - name: classnalytic-api
        image: registry.itforge.io/classnalytic/api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 32Mi
      imagePullSecrets:
      - name: itforge
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: classnalytic-api
  namespace: classnalytic
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: classnalytic-api
