k8s-config/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: classnalytic-frontend
  namespace: classnalytic
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: classnalytic-frontend
    spec:
      containers:
      - name: classnalytic-frontend
        image: registry.itforge.io/classnalytic/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
      imagePullSecrets:
      - name: itforge
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: classnalytic-frontend
  namespace: classnalytic
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: classnalytic-frontend
