k8s-config/endpoint.yaml
kind: Service
apiVersion: v1
metadata:
 name: classnalytic-predict
 namespace: classnalytic
spec:
 ports:
 - port: 80
   targetPort: 80
---
kind: Endpoints
apiVersion: v1
metadata:
 name: classnalytic-predict
 namespace: classnalytic
subsets:
 - addresses:
     - ip: 10.140.0.2
   ports:
     - port: 80
