k8s-config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: classnalytic
  namespace: classnalytic
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - classnalytic.app
    secretName: cert-classnalytic-app
  rules:
  - host: classnalytic.app
    http:
      paths:
      - path: /
        backend:
          serviceName: classnalytic-frontend
          servicePort: 3000
      - path: /api
        backend:
          serviceName: classnalytic-api
          servicePort: 5000
      - path: /api/predict
        backend:
          serviceName: classnalytic-predict
          servicePort: 80
